<resources>
    <string name="app_name">FinalProject</string>

    <!-- START VIEW -->
    <string name="textview_ip">WAREHOUSE IP</string>
    <string name="textview_port">WAREHOUSE PORT</string>
    <string name="textview_sale_ip">SALES IP</string>
    <string name="textview_sale_port">SALES PORT</string>
    <string name="textview_separator">:</string>
    <string name="edittext_ip">127.0.0.1</string>
    <string name="edittext_ip_hint">IP of Server</string>
    <string name="edittext_port">3000</string>
    <string name="edittext_port_hint">PORT of Server</string>
    <string name="button_connect">Connect to the Server</string>

    <!-- WAITING CARD -->
    <string name="textview_wait">Please, wait</string>

    <!-- TRANSACTION VIEW -->
    <string name="img_content_description_product">Image of the product</string>
    <string name="textview_list_of_products">List of products</string>
    <string name="img_content_description_shop">Image of shopping cart</string>
    <string name="img_content_description_refresh">Image of refreshing icon</string>
    <string name="textview_transaction">Transaction</string>
    <string name="editText_amount_hint">Amount to buy</string>
    <string name="button_add_product">Add</string>
    <string name="button_submit">Submit</string>
    <string name="textview_product">Product ID</string>
    <string name="editText_product_hint">ID of the product</string>

    <!-- RECYCLER VIEW -->
    <string name="textview_product_id">(ID)</string>
    <string name="textview_product_name">PRODUCT_NAME</string>
    <string name="textview_product_price">0.00</string>
    <string name="textview_product_stock">0</string>
</resources>