<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearlayout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/textView_title"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/textView_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_ip"
                android:textAlignment="center"
                android:textSize="24sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_separator"
                android:textSize="24sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_port"
                android:textAlignment="center"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">

            <EditText
                android:id="@+id/editText_ip"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/edittext_ip"
                android:hint="@string/edittext_ip_hint"
                android:textAlignment="center"
                android:inputType="text"
                android:importantForAutofill="no"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_separator"
                android:textSize="24sp"
                />

            <EditText
                android:id="@+id/editText_port"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/edittext_port"
                android:hint="@string/edittext_port_hint"
                android:textAlignment="center"
                android:inputType="number"
                android:importantForAutofill="no"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>