<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewProductImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/img_content_description_product" />

    <ImageView
        android:id="@+id/imageViewShoppingCart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/shopping_cart"
        android:contentDescription="@string/img_content_description_shop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewShoppingCart"
        app:layout_constraintStart_toEndOf="@+id/imageViewProductImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView_product_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="@string/textview_product_name"
            />

        <TextView
            android:id="@+id/textView_product_price"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="textStart"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:text="@string/textview_product_price"/>

        <TextView
            android:id="@+id/textView_product_stock"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textStart"
            android:text="@string/textview_product_stock"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>