<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperationsActivity">

    <TextView
        android:id="@+id/textView_productList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/textview_list_of_products"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_products"/>

    <ImageView
        android:id="@+id/imageViewRefresh"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_products"
        android:src="@drawable/refresh_icon"
        android:contentDescription="@string/img_content_description_refresh" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_min="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView_productList"
        app:layout_constraintBottom_toTopOf="@id/linearlayout_transaction"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        />

    <LinearLayout
        android:id="@+id/linearlayout_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginVertical="32dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_products"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#000"
            android:layout_marginVertical="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_transaction"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textview_product"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginEnd="8dp"
                />

            <EditText
                android:id="@+id/editText_product_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:hint="@string/editText_product_hint"
                android:enabled="false"
                android:textAlignment="center"
                android:textSize="16sp"
                android:inputType="number"
                android:importantForAutofill="no"
                android:layout_marginEnd="4dp"
                />

            <EditText
                android:id="@+id/editText_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:hint="@string/editText_amount_hint"
                android:enabled="false"
                android:textAlignment="center"
                android:textSize="16sp"
                android:inputType="number"
                android:importantForAutofill="no"
                android:layout_marginStart="4dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="8dp">

            <Button
                android:id="@+id/button_add_product"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/button_add_product"
                android:textSize="24sp"
                android:layout_marginHorizontal="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/button_submit"
                android:textSize="24sp"
                android:layout_marginHorizontal="8dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>